--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+windows-sys = { version = "0.60.2", features = [
+    "Win32_Foundation",
+    "Win32_Storage_FileSystem", 
+    "Win32_System_Ioctl",
+    "Win32_Security",
+    "Win32_System_IO",
+    "Win32_Storage_IscsiDisc",
+]}
