--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+[target.'cfg(target_os = "macos")'.dependencies]
 libc = "0.2.175"
+
+[target.'cfg(target_os = "windows")'.dependencies]
 windows-sys = { version = "0.60.2", features = [
     "Win32_Foundation",
     "Win32_Storage_FileSystem", 
@@ -14,5 +18,5 @@ windows-sys = { version = "0.60.2", features = [
     "Win32_Storage_IscsiDisc",
 ]}
 
-[build-dependencies]
+[target.'cfg(target_os = "macos")'.build-dependencies]
 cc = "1.2.34"
