--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 
-[target.'cfg(target_os = "macos")'.dependencies]
+[target.'cfg(any(target_os = "macos",target_os = "linux"))'.dependencies]
 libc = "0.2.175"
 
 [target.'cfg(target_os = "windows")'.dependencies]
