fix invalid keyword

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 description = "CD-DA (audio CD) reading library"
 repository = "https://github.com/Bloomca/rust-cd-da-reader"
 license = "MIT"
-keywords = ["audio CD", "CD-DA"]
+keywords = ["audio_CD", "CD-DA"]
 exclude = ["target", "Cargo.lock"]
 
 [dependencies]
